# Atmpt

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml  rust.yml
src/: cli.rs  lib.rs  main.rs  session.rs  templates.rs
templates/c/: Makefile  README.md
templates/c/src/: main.c
templates/cpp/: Makefile  README.md
templates/java/: README.md
templates/python/: README.md
templates/rust/: README.md
tests/: mod.rs
