[package]
name = "atmpt"
authors = ["Marcelo Hernandez <marcelohdez.inq@gmail.com>"]
description = "Attempt quick, temporary code projects"
homepage = "https://github.com/marcelohdez/atmpt"
license = "GPL-3.0-only"
keywords = ["cli"]

version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
directories-next = "2.0.0"
clap = { version = "4.5.0", features = ["derive", "env"] }
chrono = "0.4.34"

[build-dependencies]
clap = { version = "4.5.0", features = ["derive", "env"] }
clap_complete = "4.5.0"

[dev-dependencies]
assert_cmd = "2.0.13"
