[package]
name = "atmpt"
authors = ["Marcelo Hernandez <marcelohdez.inq@gmail.com>"]
description = "Attempt quick, temporary code projects"
homepage = "https://github.com/marcelohdez/atmpt"
repository = "https://github.com/marcelohdez/atmpt"
license = "GPL-3.0-only"
keywords = ["cli"]

version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
directories = "5.0"
clap = { version = "4.5", features = ["derive", "env"] }
chrono = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

[dev-dependencies]
assert_cmd = "2.0"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
